Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
Raspberry Pi 4
-
-
45875b352 (dev), 94265bfd4 (6.9), 0d9483007 (dev), 77aaf20f3 (6.9), 5a7f4cbef (6.8), 80726309f (6.8), 12689e01c (tqtc/lts-6.5)
-
Multimedia wk 51-2
Description
When a video is played multiple times, memory usage keeps increasing. There seems to be a memory leak in the video playback.
Steps to reproduce the issue
- Make sure at least one mp4 file available on /home/root/Files (MEDIA_DIR macro in file_manager_consts_h)
- Deploy the application on Raspberry Pi 4
- Play the video
- Press back button to go back to the video menu, play the video again
Repeat step 4 for at least 10 times to observe the behaviour.
Relates to: https://bugreports.qt.io/browse/QTBUG-129765
Attachments
Issue Links
- duplicates
-
QTBUG-124582 [gstreamer] memory leak of assets
-
- Closed
-
- relates to
-
QTBUG-132499 assertion failure in callQObjectMethodAsVariant when using qml cache
-
- Closed
-
-
QTBUG-133135 Paused or completed video playback freezes application using MediaPlayer (gstreamer backend)
-
- Closed
-
For Gerrit Dashboard: QTBUG-132478 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
614337,2 | GStreamer: QGstVideoRenderer - remove unused m_currentState | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614338,4 | GStreamer: QSharedHandle - fix move-to-self | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614433,2 | GStreamer: QGstVideoRenderer - remove unused m_currentState | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614564,2 | GStreamer: QGstVideoRenderer - remove unused m_currentState | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614885,2 | GStreamer: QSharedHandle - fix move-to-self | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614889,2 | GStreamer: QSharedHandle - fix move-to-self | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614898,3 | GStreamer: QSharedHandle - fix move-to-self | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | +1 |