GStreamer: QGstVideoRenderer - remove unused m_currentState

We don't use the current render buffer state anymore, but only keep the
current pipeline frame. So we don't need to keep it around longer than
necessary.

Task-number: QTBUG-132478
Change-Id: Ic33e5a3be814ef15708e282e1cc4005509ce679f
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 45875b3521018dca3a6fdc7775ffc558ad8511c4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 94265bfd4d8a4381f71ce42b525218db7f54dff6)