src/plugins/multimedia/gstreamer/common/qgstvideorenderersink_p.h
@@ -131,7 +131,6 @@ private:
     QVideoFrame m_currentVideoFrame;
     bool m_isActive{ false };
 
-    RenderBufferState m_currentState;
     QGstUtils::QConcurrentQueue<RenderBufferState> m_bufferQueue;
     bool m_flushing{ false };
 };
